Add support for custom page title
Use can set title prefix #4.

--- a/configuration.properties.sample
+++ b/configuration.properties.sample
@@ -6,3 +6,6 @@ virtuoso.sparql.url = https://localhost/sparql
 
 # Port used by DCAT-AP viewer.
 port = 3000
+
+# Page title prefix.
+client.title_prefix = NKOD
