--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "DCAT-AP viewer.",
   "main": "server.js",
   "author": "",
-  "scripts": {
-  },
+  "scripts": {},
   "license": "X11",
   "dependencies": {
     "babel-cli": "^6.24.0",
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.1",
+    "babel-plugin-transform-define": "^1.3.0",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-2": "^6.24.1",
