--- a/configuration.properties.sample
+++ b/configuration.properties.sample
@@ -17,3 +17,6 @@ port = 3000
 # Page title configuration.
 client.title_prefix =
 client.title_suffix = - NKOD
+
+# Sentry error report URL.
+sentry.url =
