--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react-addons-css-transition-group": "^15.5.2",
     "react-addons-transition-group": "^15.5.2",
     "react-dom": "^15.4.2",
+    "react-notification-system": "^0.2.14",
+    "react-notification-system-redux": "^1.1.4",
     "react-redux": "^5.0.3",
     "react-router": "^3.0.2",
     "react-router-redux": "^4.0.7",
