--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-2": "^6.24.1",
     "body-parser": "^1.16.0",
+    "es6-promise": "^4.1.1",
     "express": "^4.14.0",
+    "isomorphic-fetch": "^2.2.1",
     "prop-types": "^15.5.8",
     "properties-reader": "0.0.15",
     "raven-js": "^3.15.0",
