Split server and client configuration

--- a/.babelrc
+++ b/.babelrc
@@ -7,7 +7,7 @@
   "plugins": [
     [
       "transform-define",
-      "./server/configuration.js"
+      "./client/client_configuration.js"
     ]
   ]
 }
