--- a/configuration.properties.sample
+++ b/configuration.properties.sample
@@ -30,3 +30,6 @@ google_tag_manager.id =
 
 # Path to custom footer, see "Customization" on wiki for more information
 # footer_file_path =
+
+# Tag cloud filter options.
+client.keyword_cloud.min = 100
