--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "thunk": "0.0.1",
     "webpack": "^2.3.3",
     "webpack-dev-middleware": "^1.10.1",
-    "react-tag-cloud": "^1.0.1"
+    "react-tagcloud": "^1.2.0"
   },
   "devDependencies": {}
 }
