--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^15.4.2",
     "react-addons-css-transition-group": "^15.5.2",
     "react-addons-transition-group": "^15.5.2",
+    "react-bootstrap-typeahead": "^2.1.0",
     "react-dom": "^15.4.2",
     "react-google-tag-manager": "^2.1.0",
     "react-notification-system": "^0.2.14",
