--- a/configuration.properties.sample
+++ b/configuration.properties.sample
@@ -3,7 +3,7 @@
 #
 
 # Path to Solr Core (collection) with DCAT-AP data.
-solr.url = http://localhost:8983/solr/nkod
+solr.url = http://localhost:8983/solr/dcat-ap-viewer
 
 # Path to Virtuoso instance with data.
 virtuoso.sparql.url =
