--- a/package.json
+++ b/package.json
@@ -32,14 +32,14 @@
     "react-redux": "^5.0.3",
     "react-router": "^3.0.2",
     "react-router-redux": "^4.0.7",
-    "reactstrap": "^4.5.0",
+    "react-tagcloud": "^1.2.0",
+    "reactstrap": "^6.0.1",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
     "request": "^2.81.0",
     "thunk": "0.0.1",
     "webpack": "^2.3.3",
-    "webpack-dev-middleware": "^1.10.1",
-    "react-tagcloud": "^1.2.0"
+    "webpack-dev-middleware": "^1.10.1"
   },
   "devDependencies": {}
 }
