--- a/package.json
+++ b/package.json
@@ -12,34 +12,34 @@
     "babel-loader": "^6.4.1",
     "babel-plugin-transform-define": "^1.3.0",
     "babel-preset-es2015": "^6.24.0",
-    "babel-preset-react": "^6.23.0",
+    "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
-    "body-parser": "^1.16.0",
-    "es6-promise": "^4.1.1",
-    "express": "^4.14.0",
+    "body-parser": "^1.18.3",
+    "es6-promise": "^4.2.4",
+    "express": "^4.16.3",
     "isomorphic-fetch": "^2.2.1",
-    "prop-types": "^15.5.8",
-    "properties-reader": "0.0.15",
-    "raven-js": "^3.15.0",
+    "prop-types": "^15.6.1",
+    "properties-reader": "0.0.16",
+    "query-string": "^6.1.0",
+    "raven-js": "^3.25.2",
     "react": "^16.4.0",
-    "react-addons-css-transition-group": "^15.5.2",
-    "react-addons-transition-group": "^15.5.2",
-    "react-bootstrap-typeahead": "^2.1.0",
+    "react-addons-css-transition-group": "^15.6.2",
+    "react-addons-transition-group": "^15.6.2",
+    "react-bootstrap-typeahead": "^3.1.4",
     "react-dom": "^16.4.0",
-    "react-google-tag-manager": "^2.1.0",
-    "react-notification-system": "^0.2.14",
-    "react-notification-system-redux": "^1.1.4",
-    "react-redux": "^5.0.3",
-    "react-router": "^3.0.2",
-    "react-router-redux": "^4.0.7",
+    "react-google-tag-manager": "^2.2.1",
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.2.2",
+    "react-router-redux": "^5.0.0-alpha.9",
     "react-tagcloud": "^1.2.0",
-    "reactstrap": "^6.0.1",
-    "redux": "^3.6.0",
-    "redux-thunk": "^2.2.0",
-    "request": "^2.81.0",
+    "reactstrap": "^6.1.0",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0",
+    "request": "^2.87.0",
     "thunk": "0.0.1",
-    "webpack": "^2.3.3",
-    "webpack-dev-middleware": "^1.10.1"
+    "webpack": "^2.3.3"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "webpack-dev-middleware": "^1.10.1"
+  }
 }
