--- a/.babelrc
+++ b/.babelrc
@@ -1,13 +1,17 @@
 {
   "presets": [
-    "es2015",
+    "stage-2",
     "react",
-    "stage-2"
+    "env"
   ],
-  "plugins": [
-    [
-      "transform-define",
-      "./client/client_configuration.js"
-    ]
-  ]
+  "env": {
+    "development": {
+      "plugins": [
+        "react-hot-loader/babel"
+      ],
+      "ignore": [
+        "node_modules"
+      ]
+    }
+  }
 }
