--- a/package.json
+++ b/package.json
@@ -1,45 +1,59 @@
 {
   "name": "dcat-viewer",
-  "version": "0.0.1",
+  "version": "1.0.0-alpha.0",
   "description": "DCAT-AP viewer.",
   "private": true,
-  "main": "server.js",
   "author": "",
-  "scripts": {},
+  "scripts": {
+    "dev": "node server/server.develop.js",
+    "build": "cross-env NODE_ENV=production webpack --config build/webpack.production.js",
+    "start": "node server/server.production.js"
+  },
   "license": "X11",
   "repository": "github:linkedpipes/dcat-ap-viewer",
   "dependencies": {
-    "babel-cli": "^6.24.0",
-    "babel-core": "^6.24.0",
-    "babel-loader": "^6.4.1",
-    "babel-plugin-transform-define": "^1.3.0",
-    "babel-preset-es2015": "^6.24.0",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.5",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "body-parser": "^1.18.3",
+    "clean-webpack-plugin": "^0.1.19",
+    "copy-webpack-plugin": "^4.5.2",
+    "cross-env": "^5.2.0",
+    "css-loader": "^1.0.0",
     "es6-promise": "^4.2.4",
     "express": "^4.16.3",
+    "html-webpack-plugin": "^3.2.0",
     "isomorphic-fetch": "^2.2.1",
+    "mini-css-extract-plugin": "^0.4.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.0",
     "prop-types": "^15.6.1",
     "properties-reader": "0.0.16",
     "query-string": "^6.1.0",
-    "raven-js": "^3.25.2",
-    "react": "^16.4.0",
-    "react-bootstrap-typeahead": "^3.1.4",
-    "react-dom": "^16.4.0",
+    "raven-js": "^3.26.3",
+    "react": "^16.4.1",
+    "react-bootstrap-typeahead": "^3.1.5",
+    "react-dom": "^16.4.1",
     "react-google-tag-manager": "^2.2.1",
+    "react-hot-loader": "^4.3.3",
     "react-redux": "^5.0.7",
-    "react-router-dom": "^4.2.2",
+    "react-router-dom": "^4.3.1",
     "react-router-redux": "^5.0.0-alpha.9",
-    "react-tagcloud": "^1.2.0",
-    "reactstrap": "^6.1.0",
+    "react-tagcloud": "^1.2.1",
+    "reactstrap": "^6.3.0",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
     "request": "^2.87.0",
+    "style-loader": "^0.21.0",
     "thunk": "0.0.1",
-    "webpack": "^2.3.3"
+    "webpack": "^4.16.1",
+    "webpack-cli": "^3.0.8",
+    "webpack-merge": "^4.1.2"
   },
   "devDependencies": {
-    "webpack-dev-middleware": "^1.10.1"
+    "webpack-dev-middleware": "^3.1.3",
+    "webpack-hot-middleware": "^2.22.2"
   }
 }
