--- a/configuration.properties.sample
+++ b/configuration.properties.sample
@@ -34,3 +34,5 @@ google_tag_manager.id =
 # Tag cloud filter options.
 client.keyword_cloud.min = 100
 
+# Forms URL - with percent encoded of utf-8 characters.
+client.form_url =
