--- a/public/assets/icons/manifest.json
+++ b/public/assets/icons/manifest.json
@@ -1,5 +1,6 @@
 {
-    "name": "",
+    "name": "Národní katalog otevřených dat",
+	"short_name": "NKOD",
     "icons": [
         {
             "src": "/assets/icons/android-chrome-192x192.png",
@@ -12,7 +13,7 @@
             "type": "image/png"
         }
     ],
-    "theme_color": "#ffffff",
+    "theme_color": "#057fa5",
     "background_color": "#ffffff",
     "display": "standalone"
 }
