--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "dev": "node server/server.develop.js",
     "build": "cross-env NODE_ENV=production webpack --config build/webpack.production.js",
-    "start": "node server/server.production.js"
+    "start": "node server/server.production.js",
+    "start-api": "node server/server.api.js"
   },
   "license": "X11",
   "repository": "github:linkedpipes/dcat-ap-viewer",
