--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "prop-types": "^15.6.1",
     "properties-reader": "0.0.16",
     "query-string": "^6.1.0",
+    "randomcolor": "^0.5.3",
     "raven-js": "^3.26.3",
     "react": "^16.4.1",
     "react-bootstrap-typeahead": "^3.1.5",
