--- a/package.json
+++ b/package.json
@@ -52,10 +52,9 @@
     "thunk": "0.0.1",
     "webpack": "^4.16.1",
     "webpack-cli": "^3.0.8",
-    "webpack-merge": "^4.1.2"
-  },
-  "devDependencies": {
+    "webpack-merge": "^4.1.2",
     "webpack-dev-middleware": "^3.1.3",
     "webpack-hot-middleware": "^2.22.2"
-  }
+  },
+  "devDependencies": {}
 }
