--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-bootstrap-typeahead": "^3.1.5",
     "react-dom": "^16.4.1",
     "react-google-tag-manager": "^2.2.1",
+    "react-helmet": "^5.2.0",
     "react-hot-loader": "^4.3.3",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
