Update to Babel 7 set Babel target

--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
   "license": "X11",
   "repository": "github:linkedpipes/dcat-ap-viewer",
   "dependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
+    "@babel/cli": "^7.1.2",
+    "@babel/core": "^7.1.2",
+    "@babel/polyfill": "^7.0.0",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-react": "^7.0.0",
     "babel-jest": "^23.6.0",
-    "babel-loader": "^7.1.5",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
+    "babel-loader": "^8.0.4",
     "body-parser": "^1.18.3",
+    "browserslist": "^4.3.4",
     "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^4.5.2",
     "cross-env": "^5.2.0",
@@ -57,7 +58,7 @@
     "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.3.0",
     "request": "^2.87.0",
-    "style-loader": "^0.21.0",
+    "style-loader": "^0.23.1",
     "thunk": "0.0.1",
     "webpack": "^4.16.1",
     "webpack-cli": "^3.0.8",
