Update links to forms
#120

--- a/configuration.properties.sample
+++ b/configuration.properties.sample
@@ -41,7 +41,7 @@ google_tag_manager.id =
 client.keyword_cloud.min = 100
 
 # Forms URL - with percent encoded of utf-8 characters.
-client.form_url =
+client.form_url = https://dev.nkod.opendata.cz/formulář/
 
 # Prefix used to create dereference IRI for datasets.
 client.dereference_prefix =
