--- a/package.json
+++ b/package.json
@@ -64,7 +64,8 @@
     "webpack-cli": "^3.0.8",
     "webpack-dev-middleware": "^3.1.3",
     "webpack-hot-middleware": "^2.22.2",
-    "webpack-merge": "^4.1.2"
+    "webpack-merge": "^4.1.2",
+    "uglifyjs-webpack-plugin": "^1.2.7"
   },
   "devDependencies": {}
 }
