--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.4",
     "body-parser": "^1.18.3",
+    "bootstrap": "^4.3.1",
     "browserslist": "^4.3.4",
     "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^4.5.2",
@@ -53,19 +54,19 @@
     "react-router-redux": "^5.0.0-alpha.9",
     "react-tagcloud": "^1.2.1",
     "react-test-renderer": "^16.5.2",
-    "reactstrap": "^6.3.0",
+    "reactstrap": "^8.0.1",
     "redux": "^4.0.0",
     "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.3.0",
     "request": "^2.87.0",
     "style-loader": "^0.23.1",
     "thunk": "0.0.1",
+    "uglifyjs-webpack-plugin": "^1.2.7",
     "webpack": "^4.16.1",
     "webpack-cli": "^3.0.8",
     "webpack-dev-middleware": "^3.1.3",
     "webpack-hot-middleware": "^2.22.2",
-    "webpack-merge": "^4.1.2",
-    "uglifyjs-webpack-plugin": "^1.2.7"
+    "webpack-merge": "^4.1.2"
   },
   "devDependencies": {}
 }
