--- a/package.json
+++ b/package.json
@@ -14,59 +14,60 @@
   "license": "X11",
   "repository": "github:linkedpipes/dcat-ap-viewer",
   "dependencies": {
-    "@babel/cli": "^7.1.2",
-    "@babel/core": "^7.1.2",
-    "@babel/polyfill": "^7.0.0",
-    "@babel/preset-env": "^7.1.0",
+    "@babel/cli": "^7.6.0",
+    "@babel/core": "^7.6.0",
+    "@babel/polyfill": "^7.6.0",
+    "@babel/preset-env": "^7.6.0",
     "@babel/preset-react": "^7.0.0",
-    "babel-jest": "^23.6.0",
-    "babel-loader": "^8.0.4",
-    "body-parser": "^1.18.3",
+    "babel-jest": "^24.9.0",
+    "babel-loader": "^8.0.6",
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
-    "browserslist": "^4.3.4",
-    "clean-webpack-plugin": "^0.1.19",
-    "copy-webpack-plugin": "^4.5.2",
-    "cross-env": "^5.2.0",
-    "css-loader": "^1.0.0",
-    "enzyme": "^3.7.0",
-    "enzyme-adapter-react-16": "^1.6.0",
-    "es6-promise": "^4.2.4",
-    "express": "^4.16.3",
+    "browserslist": "^4.7.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "connected-react-router": "^6.5.2",
+    "copy-webpack-plugin": "^5.0.4",
+    "cross-env": "^5.2.1",
+    "css-loader": "^3.2.0",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "es6-promise": "^4.2.8",
+    "express": "^4.17.1",
     "html-webpack-plugin": "^3.2.0",
     "identity-obj-proxy": "^3.0.0",
     "isomorphic-fetch": "^2.2.1",
-    "jest": "^23.6.0",
-    "mini-css-extract-plugin": "^0.4.1",
-    "optimize-css-assets-webpack-plugin": "^5.0.0",
-    "prop-types": "^15.6.1",
-    "properties-reader": "0.0.16",
-    "query-string": "^6.1.0",
-    "randomcolor": "^0.5.3",
-    "raven-js": "^3.26.3",
-    "react": "^16.8.6",
-    "react-bootstrap-typeahead": "^3.4.6",
-    "react-dom": "^16.8.6",
+    "jest": "^24.9.0",
+    "mini-css-extract-plugin": "^0.8.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "prop-types": "^15.7.2",
+    "properties-reader": "0.3.1",
+    "query-string": "^6.8.3",
+    "randomcolor": "^0.5.4",
+    "raven-js": "^3.27.2",
+    "react": "^16.9.0",
+    "react-bootstrap-typeahead": "^3.4.7",
+    "react-dom": "^16.9.0",
     "react-google-tag-manager": "^2.2.1",
-    "react-helmet": "^5.2.0",
-    "react-hot-loader": "^4.3.3",
-    "react-redux": "^5.0.7",
-    "react-router-dom": "^4.3.1",
-    "react-router-redux": "^5.0.0-alpha.9",
-    "react-tagcloud": "^1.2.1",
-    "react-test-renderer": "^16.5.2",
+    "react-helmet": "^5.2.1",
+    "react-hot-loader": "^4.12.12",
+    "react-redux": "^7.1.1",
+    "react-router": "^5.0.1",
+    "react-router-dom": "^5.0.1",
+    "react-tagcloud": "^1.4.0",
+    "react-test-renderer": "^16.9.0",
     "reactstrap": "^8.0.1",
-    "redux": "^4.0.0",
+    "redux": "^4.0.4",
     "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.3.0",
-    "request": "^2.87.0",
-    "style-loader": "^0.23.1",
+    "request": "^2.88.0",
+    "style-loader": "^1.0.0",
     "thunk": "0.0.1",
-    "uglifyjs-webpack-plugin": "^1.2.7",
-    "webpack": "^4.16.1",
-    "webpack-cli": "^3.0.8",
-    "webpack-dev-middleware": "^3.1.3",
-    "webpack-hot-middleware": "^2.22.2",
-    "webpack-merge": "^4.1.2"
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "webpack": "^4.39.3",
+    "webpack-cli": "^3.3.8",
+    "webpack-dev-middleware": "^3.7.1",
+    "webpack-hot-middleware": "^2.25.0",
+    "webpack-merge": "^4.2.2"
   },
   "devDependencies": {}
 }
