--- a/package.json
+++ b/package.json
@@ -16,22 +16,24 @@
   "repository": "github:linkedpipes/dcat-ap-viewer",
   "dependencies": {
     "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.8.4",
-    "@babel/polyfill": "^7.8.3",
-    "@babel/preset-env": "^7.8.4",
+    "@babel/core": "^7.8.7",
+    "@babel/polyfill": "^7.8.7",
+    "@babel/preset-env": "^7.8.7",
     "@babel/preset-react": "^7.8.3",
-    "@hot-loader/react-dom": "^16.11.0",
+    "@hot-loader/react-dom": "^16.12.0",
     "@types/jsonld": "^1.5.1",
-    "@types/react": "^16.9.22",
+    "@types/react": "^16.9.23",
+    "@types/react-redux": "^7.1.7",
+    "@types/reactstrap": "^8.4.2",
     "babel-loader": "^8.0.6",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.4.1",
-    "browserslist": "^4.8.7",
+    "browserslist": "^4.9.1",
     "clean-webpack-plugin": "^3.0.0",
     "connected-react-router": "^6.7.0",
     "copy-webpack-plugin": "^5.1.1",
     "core-js": "^3.6.4",
-    "cross-env": "^7.0.0",
+    "cross-env": "^7.0.2",
     "css-loader": "^3.4.2",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
@@ -41,24 +43,24 @@
     "html-webpack-plugin": "^3.2.0",
     "identity-obj-proxy": "^3.0.0",
     "isomorphic-fetch": "^2.2.1",
-    "jsonld": "^2.0.2",
+    "jsonld": "^3.0.1",
     "mini-css-extract-plugin": "^0.9.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "prop-types": "^15.7.2",
     "properties-reader": "1.0.0",
-    "query-string": "^6.11.0",
+    "query-string": "^6.11.1",
     "randomcolor": "^0.5.4",
     "raven-js": "^3.27.2",
-    "react": "^16.12.0",
-    "react-bootstrap-typeahead": "^3.4.7",
-    "react-dom": "^16.12.0",
+    "react": "^16.13.0",
+    "react-bootstrap-typeahead": "^4.0.0",
+    "react-dom": "^16.13.0",
     "react-google-tag-manager": "^2.2.1",
     "react-helmet": "^5.2.1",
     "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-tagcloud": "^2.0.0",
-    "react-test-renderer": "^16.12.0",
+    "react-test-renderer": "^16.13.0",
     "reactstrap": "^8.4.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
@@ -67,23 +69,23 @@
     "terser-webpack-plugin": "^2.3.5",
     "thunk": "0.0.1",
     "ts-loader": "^6.2.1",
-    "typescript": "^3.8.2",
-    "webpack": "^4.41.6",
+    "typescript": "^3.8.3",
+    "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11",
     "webpack-merge": "^4.2.2",
-    "yaml": "^1.7.2"
+    "yaml": "^1.8.2"
   },
   "devDependencies": {
-    "@types/jest": "^25.1.3",
-    "babel-eslint": "^10.0.3",
+    "@types/jest": "^25.1.4",
+    "babel-eslint": "^10.1.0",
     "babel-jest": "^25.1.0",
     "eslint": "^6.8.0",
     "eslint-loader": "^3.0.3",
-    "eslint-plugin-jest": "^23.8.0",
-    "eslint-plugin-react": "^7.18.3",
+    "eslint-plugin-jest": "^23.8.2",
+    "eslint-plugin-react": "^7.19.0",
     "jest": "^25.1.0",
     "react-hot-loader": "^4.12.19",
-    "selenium-webdriver": "^4.0.0-alpha.5",
+    "selenium-webdriver": "^4.0.0-alpha.7",
     "ts-jest": "^25.2.1",
     "webpack-dev-middleware": "^3.7.2",
     "webpack-hot-middleware": "^2.25.0",
