--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "moduleResolution": "node",
     "allowJs": true,
     "sourceMap": true,
-    "declaration": true
+    "declaration": true,
+    "jsx": "react"
   }
 }
