--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "isomorphic-fetch": "^2.2.1",
     "jsonld": "^3.0.1",
     "mini-css-extract-plugin": "^0.9.0",
+    "moment": "^2.24.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "prop-types": "^15.7.2",
     "properties-reader": "1.0.0",
@@ -68,11 +69,13 @@
     "style-loader": "^1.1.3",
     "terser-webpack-plugin": "^2.3.5",
     "thunk": "0.0.1",
+    "triple-beam": "^1.3.0",
     "ts-loader": "^6.2.1",
     "typescript": "^3.8.3",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11",
     "webpack-merge": "^4.2.2",
+    "winston": "^3.2.1",
     "yaml": "^1.8.2"
   },
   "devDependencies": {
