--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@babel/polyfill": "^7.8.7",
     "@babel/preset-env": "^7.8.7",
     "@babel/preset-react": "^7.8.3",
-    "@hot-loader/react-dom": "^16.12.0",
+    "@hot-loader/react-dom": "^16.13.0",
     "@types/jsonld": "^1.5.1",
     "@types/react": "^16.9.23",
     "@types/react-redux": "^7.1.7",
@@ -28,9 +28,9 @@
     "babel-loader": "^8.0.6",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.4.1",
-    "browserslist": "^4.9.1",
+    "browserslist": "^4.10.0",
     "clean-webpack-plugin": "^3.0.0",
-    "connected-react-router": "^6.7.0",
+    "connected-react-router": "^6.8.0",
     "copy-webpack-plugin": "^5.1.1",
     "core-js": "^3.6.4",
     "cross-env": "^7.0.2",
@@ -53,7 +53,7 @@
     "randomcolor": "^0.5.4",
     "raven-js": "^3.27.2",
     "react": "^16.13.0",
-    "react-bootstrap-typeahead": "^4.0.0",
+    "react-bootstrap-typeahead": "^4.1.0",
     "react-dom": "^16.13.0",
     "react-google-tag-manager": "^2.2.1",
     "react-helmet": "^5.2.1",
@@ -82,17 +82,17 @@
     "@types/jest": "^25.1.4",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^25.1.0",
+    "chromedriver": "^80.0.1",
     "eslint": "^6.8.0",
     "eslint-loader": "^3.0.3",
     "eslint-plugin-jest": "^23.8.2",
     "eslint-plugin-react": "^7.19.0",
+    "geckodriver": "^1.19.1",
     "jest": "^25.1.0",
-    "react-hot-loader": "^4.12.19",
+    "react-hot-loader": "^4.12.20",
     "selenium-webdriver": "^4.0.0-alpha.7",
     "ts-jest": "^25.2.1",
     "webpack-dev-middleware": "^3.7.2",
-    "webpack-hot-middleware": "^2.25.0",
-    "chromedriver": "^80.0.1",
-    "geckodriver": "^1.19.1"
+    "webpack-hot-middleware": "^2.25.0"
   }
 }
