--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "enzyme-adapter-react-16": "^1.15.2",
     "es6-promise": "^4.2.8",
     "express": "^4.17.1",
+    "helmet": "^3.21.3",
     "history": "^4.10.1",
     "html-webpack-plugin": "^3.2.0",
     "identity-obj-proxy": "^3.0.0",
