--- a/package.json
+++ b/package.json
@@ -16,83 +16,92 @@
   "repository": "github:linkedpipes/dcat-ap-viewer",
   "dependencies": {
     "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.8.7",
+    "@babel/core": "^7.9.6",
     "@babel/polyfill": "^7.8.7",
-    "@babel/preset-env": "^7.8.7",
-    "@babel/preset-react": "^7.8.3",
+    "@babel/preset-env": "^7.9.6",
+    "@babel/preset-react": "^7.9.4",
     "@hot-loader/react-dom": "^16.13.0",
+    "@types/history": "^4.7.6",
     "@types/jsonld": "^1.5.1",
-    "@types/react": "^16.9.23",
-    "@types/react-redux": "^7.1.7",
+    "@types/randomcolor": "^0.5.5",
+    "@types/react": "^16.9.35",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-helmet": "^6.0.0",
+    "@types/react-redux": "^7.1.9",
+    "@types/react-router-dom": "^5.1.5",
     "@types/reactstrap": "^8.4.2",
-    "babel-loader": "^8.0.6",
+    "babel-loader": "^8.1.0",
     "body-parser": "^1.19.0",
-    "bootstrap": "^4.4.1",
-    "browserslist": "^4.10.0",
+    "bootstrap": "^4.5.0",
+    "browserslist": "^4.12.0",
     "clean-webpack-plugin": "^3.0.0",
     "connected-react-router": "^6.8.0",
-    "copy-webpack-plugin": "^5.1.1",
-    "core-js": "^3.6.4",
+    "copy-webpack-plugin": "^6.0.1",
+    "core-js": "^3.6.5",
     "cross-env": "^7.0.2",
-    "css-loader": "^3.4.2",
+    "css-loader": "^3.5.3",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "es6-promise": "^4.2.8",
     "express": "^4.17.1",
-    "helmet": "^3.21.3",
+    "helmet": "^3.22.0",
     "history": "^4.10.1",
-    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-plugin": "^4.3.0",
     "identity-obj-proxy": "^3.0.0",
     "isomorphic-fetch": "^2.2.1",
-    "jsonld": "^3.0.1",
+    "jsonld": "^3.1.0",
     "mini-css-extract-plugin": "^0.9.0",
-    "moment": "^2.24.0",
+    "moment": "^2.26.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "prop-types": "^15.7.2",
-    "properties-reader": "1.0.0",
-    "query-string": "^6.11.1",
+    "properties-reader": "2.0.0",
+    "query-string": "^6.12.1",
     "randomcolor": "^0.5.4",
     "raven-js": "^3.27.2",
-    "react": "^16.13.0",
-    "react-bootstrap-typeahead": "^4.1.0",
-    "react-dom": "^16.13.0",
+    "react": "^16.13.1",
+    "react-bootstrap-typeahead": "^4.2.3",
+    "react-dom": "^16.13.1",
     "react-google-tag-manager": "^2.2.1",
-    "react-helmet": "^5.2.1",
+    "react-helmet": "^6.0.0",
+    "react-intl": "^4.5.7",
     "react-redux": "^7.2.0",
-    "react-router": "^5.1.2",
-    "react-router-dom": "^5.1.2",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-tagcloud": "^2.0.0",
-    "react-test-renderer": "^16.13.0",
+    "react-test-renderer": "^16.13.1",
     "reactstrap": "^8.4.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "request": "^2.88.2",
-    "style-loader": "^1.1.3",
-    "terser-webpack-plugin": "^2.3.5",
+    "reselect": "^4.0.0",
+    "style-loader": "^1.2.1",
+    "terser-webpack-plugin": "^3.0.1",
     "thunk": "0.0.1",
     "triple-beam": "^1.3.0",
-    "ts-loader": "^6.2.1",
-    "typescript": "^3.8.3",
-    "webpack": "^4.42.0",
+    "ts-loader": "^7.0.4",
+    "typesafe-actions": "^5.1.0",
+    "typescript": "^3.9.3",
+    "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-merge": "^4.2.2",
     "winston": "^3.2.1",
-    "yaml": "^1.8.2"
+    "yaml": "^1.10.0"
   },
   "devDependencies": {
-    "@types/jest": "^25.1.4",
+    "@types/jest": "^25.2.3",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^25.1.0",
-    "chromedriver": "^80.0.1",
-    "eslint": "^6.8.0",
-    "eslint-loader": "^3.0.3",
-    "eslint-plugin-jest": "^23.8.2",
-    "eslint-plugin-react": "^7.19.0",
+    "babel-jest": "^26.0.1",
+    "chromedriver": "^83.0.0",
+    "eslint": "^7.0.0",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-jest": "^23.13.1",
+    "eslint-plugin-react": "^7.20.0",
     "geckodriver": "^1.19.1",
-    "jest": "^25.1.0",
-    "react-hot-loader": "^4.12.20",
+    "jest": "^26.0.1",
+    "react-hot-loader": "^4.12.21",
     "selenium-webdriver": "^4.0.0-alpha.7",
-    "ts-jest": "^25.2.1",
+    "ts-jest": "^26.0.0",
     "webpack-dev-middleware": "^3.7.2",
     "webpack-hot-middleware": "^2.25.0"
   }
