--- a/configuration-example.yaml
+++ b/configuration-example.yaml
@@ -24,18 +24,16 @@ dcat-ap-viewer:
       default-language: cs
     - type: sparql
       # SPARQL endpoint.
-      url: https://localhost:8890/sparql
+      url: http://localhost:8890/sparql
       # We use SPARQL endpoint only for quality related data.
       filter:
-        - v2-quality-dataset
-        - v2-quality-distribution
-        - v2-quality-publishers
+        - v2-quality
   client:
     # Name of a profile directory within ./client/ directory.
     # Read readme file in the profile directory to get more information
     # about following options.
     profiles:
       - profile-lkod
-    title-default: "Katalog"
-    title-prefix: ""
-    title-suffix: ""
+    page-title-default: "DCAT-AP Viewer"
+    page-title-prefix: ""
+    page-title-suffix: " - LP-DAV"
