--- a/package.json
+++ b/package.json
@@ -7,102 +7,98 @@
   "scripts": {
     "dev": "node server/develop/server-develop.js",
     "lint": "eslint --ext .js,.jsx --ignore-path .gitignore . --fix",
-    "unit-test": "jest -c client/jest.config.js --collectCoverage",
-    "build": "cross-env NODE_ENV=production webpack --config ./client/build/webpack.production.js",
+    "test": "jest -c client/jest.config.js --collectCoverage",
+    "build": "cross-env NODE_ENV=production webpack --config ./build/webpack.production.js",
     "start": "node server/production/server-production.js"
   },
   "license": "MIT",
   "repository": "github:linkedpipes/dcat-ap-viewer",
   "dependencies": {
-    "@babel/cli": "^7.12.7",
-    "@babel/core": "^7.12.7",
+    "@babel/cli": "^7.13.10",
+    "@babel/core": "^7.13.10",
     "@babel/polyfill": "^7.12.1",
-    "@babel/preset-env": "^7.12.7",
-    "@babel/preset-react": "^7.12.7",
-    "@hot-loader/react-dom": "^17.0.0",
+    "@babel/preset-env": "^7.13.12",
+    "@babel/preset-react": "^7.12.13",
     "@types/history": "^4.7.8",
-    "@types/jsonld": "^1.5.1",
+    "@types/jsonld": "^1.5.5",
     "@types/randomcolor": "^0.5.5",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.3",
     "@types/react-helmet": "^6.1.0",
-    "@types/react-redux": "^7.1.11",
-    "@types/react-router-dom": "^5.1.6",
+    "@types/react-redux": "^7.1.16",
+    "@types/react-router-dom": "^5.1.7",
     "@types/reactstrap": "^8.7.2",
-    "babel-loader": "^8.2.1",
+    "babel-loader": "^8.2.2",
     "body-parser": "^1.19.0",
-    "bootstrap": "^4.5.3",
-    "browserslist": "^4.14.7",
+    "bootstrap": "^4.6.0",
+    "browserslist": "^4.16.3",
     "clean-webpack-plugin": "^3.0.0",
-    "connected-react-router": "^6.8.0",
-    "copy-webpack-plugin": "^6.3.2",
-    "core-js": "^3.7.0",
-    "cross-env": "^7.0.2",
-    "css-loader": "^5.0.1",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.5",
+    "copy-webpack-plugin": "^8.1.0",
+    "core-js": "^3.9.1",
+    "cross-env": "^7.0.3",
+    "css-loader": "^5.1.3",
     "es6-promise": "^4.2.8",
     "express": "^4.17.1",
-    "helmet": "^4.2.0",
+    "helmet": "^4.4.1",
     "history": "^5.0.0",
-    "html-webpack-plugin": "^4.5.0",
+    "html-webpack-plugin": "^5.3.1",
     "identity-obj-proxy": "^3.0.0",
     "isomorphic-fetch": "^3.0.0",
-    "jsonld": "^3.2.0",
-    "mini-css-extract-plugin": "^1.3.1",
+    "jsonld": "^5.0.0",
+    "mini-css-extract-plugin": "^1.3.9",
     "moment": "^2.29.1",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "prop-types": "^15.7.2",
-    "properties-reader": "2.1.1",
-    "query-string": "^6.13.7",
+    "properties-reader": "2.2.0",
+    "query-string": "^7.0.0",
     "randomcolor": "^0.6.2",
     "raven-js": "^3.27.2",
-    "react": "^17.0.1",
-    "react-bootstrap-typeahead": "^5.1.2",
-    "react-dom": "^17.0.1",
+    "react": "^16.8.0",
+    "react-bootstrap-typeahead": "^5.1.4",
+    "react-dom": "^16.8.0",
     "react-google-tag-manager": "^2.2.1",
     "react-helmet": "^6.1.0",
-    "react-intl": "^5.10.4",
-    "react-redux": "^7.2.2",
+    "react-intl": "^5.13.5",
+    "react-redux": "^7.2.3",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-tagcloud": "^2.0.0",
-    "react-test-renderer": "^17.0.1",
-    "reactstrap": "^8.7.1",
+    "react-tagcloud": "^2.1.0",
+    "react-test-renderer": "^16.8.0",
+    "reactstrap": "^8.9.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "request": "^2.88.2",
     "reselect": "^4.0.0",
     "style-loader": "^2.0.0",
-    "terser-webpack-plugin": "^5.0.3",
+    "terser-webpack-plugin": "^5.1.1",
     "thunk": "0.0.1",
     "triple-beam": "^1.3.0",
-    "ts-loader": "^8.0.11",
+    "ts-loader": "^8.0.18",
     "typesafe-actions": "^5.1.0",
-    "typescript": "^4.1.2",
-    "webpack": "^5.6.0",
-    "webpack-cli": "^4.2.0",
-    "webpack-merge": "^5.4.0",
+    "typescript": "^4.2.3",
+    "webpack": "^5.27.2",
+    "webpack-merge": "^5.7.3",
     "winston": "^3.3.3",
-    "yaml": "^1.10.0"
+    "yaml": "^1.10.2"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.15",
+    "@hot-loader/react-dom": "^16.8.0",
+    "@types/jest": "^26.0.21",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.3",
-    "chromedriver": "^87.0.0",
-    "eslint": "^7.14.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
+    "eslint": "^7.22.0",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jest": "^24.1.3",
-    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-jest": "^24.3.2",
+    "eslint-plugin-react": "^7.23.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "geckodriver": "^1.21.0",
     "jest": "^26.6.3",
     "react-hot-loader": "^4.13.0",
-    "selenium-webdriver": "^4.0.0-alpha.7",
-    "ts-jest": "^26.4.4",
-    "webpack-dev-middleware": "^4.0.2",
+    "ts-jest": "^26.5.4",
+    "webpack-cli": "^4.5.0",
+    "webpack-dev-middleware": "^4.1.0",
     "webpack-hot-middleware": "^2.25.0"
   }
 }
