--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@types/reactstrap": "^8.7.2",
     "babel-loader": "^8.2.2",
     "body-parser": "^1.19.0",
-    "bootstrap": "^4.6.0",
+    "bootstrap": "^5.0.0-beta3",
     "browserslist": "^4.16.3",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^8.1.0",
@@ -64,7 +64,7 @@
     "react-router-dom": "^5.2.0",
     "react-tagcloud": "^2.1.0",
     "react-test-renderer": "^16.8.0",
-    "reactstrap": "^8.9.0",
+    "reactstrap": "^9.0.0-0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "request": "^2.88.2",
@@ -92,7 +92,7 @@
     "eslint-loader": "^4.0.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^24.3.2",
-    "eslint-plugin-react": "^7.23.0",
+    "eslint-plugin-react": "^7.23.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "jest": "^26.6.3",
     "react-hot-loader": "^4.13.0",
