--- a/package.json
+++ b/package.json
@@ -14,91 +14,80 @@
   "license": "MIT",
   "repository": "github:linkedpipes/dcat-ap-viewer",
   "dependencies": {
-    "@babel/cli": "^7.13.10",
-    "@babel/core": "^7.13.10",
+    "@babel/cli": "^7.14.3",
+    "@babel/core": "^7.14.3",
     "@babel/polyfill": "^7.12.1",
-    "@babel/preset-env": "^7.13.12",
-    "@babel/preset-react": "^7.12.13",
+    "@babel/preset-env": "^7.14.2",
+    "@babel/preset-react": "^7.13.13",
     "@types/history": "^4.7.8",
     "@types/jsonld": "^1.5.5",
     "@types/randomcolor": "^0.5.5",
-    "@types/react": "^17.0.3",
-    "@types/react-dom": "^17.0.3",
-    "@types/react-helmet": "^6.1.0",
+    "@types/react": "^17.0.6",
+    "@types/react-dom": "^17.0.5",
+    "@types/react-helmet": "^6.1.1",
     "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.7",
     "@types/reactstrap": "^8.7.2",
     "babel-loader": "^8.2.2",
-    "body-parser": "^1.19.0",
-    "bootstrap": "^5.0.0-beta3",
-    "browserslist": "^4.16.3",
+    "bootstrap": "^5.0.1",
+    "browserslist": "^4.16.6",
     "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^8.1.0",
-    "core-js": "^3.9.1",
+    "copy-webpack-plugin": "^8.1.1",
+    "core-js": "^3.12.1",
     "cross-env": "^7.0.3",
-    "css-loader": "^5.1.3",
+    "css-loader": "^5.2.4",
+    "css-minimizer-webpack-plugin": "3.0.0",
     "es6-promise": "^4.2.8",
     "express": "^4.17.1",
-    "helmet": "^4.4.1",
+    "helmet": "^4.6.0",
     "history": "^5.0.0",
     "html-webpack-plugin": "^5.3.1",
     "identity-obj-proxy": "^3.0.0",
     "isomorphic-fetch": "^3.0.0",
-    "jsonld": "^5.0.0",
-    "mini-css-extract-plugin": "^1.3.9",
-    "moment": "^2.29.1",
-    "optimize-css-assets-webpack-plugin": "^5.0.4",
+    "jsonld": "^5.2.0",
+    "mini-css-extract-plugin": "^1.6.0",
     "prop-types": "^15.7.2",
-    "properties-reader": "2.2.0",
     "query-string": "^7.0.0",
     "randomcolor": "^0.6.2",
-    "raven-js": "^3.27.2",
-    "react": "^16.8.0",
+    "react": "^17.0.2",
     "react-bootstrap-typeahead": "^5.1.4",
-    "react-dom": "^16.8.0",
-    "react-google-tag-manager": "^2.2.1",
+    "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
-    "react-intl": "^5.13.5",
-    "react-redux": "^7.2.3",
+    "react-intl": "^5.17.7",
+    "react-redux": "^7.2.4",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-tagcloud": "^2.1.0",
-    "react-test-renderer": "^16.8.0",
+    "react-tagcloud": "^2.1.1",
     "reactstrap": "^9.0.0-0",
-    "redux": "^4.0.5",
+    "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
     "request": "^2.88.2",
-    "reselect": "^4.0.0",
     "style-loader": "^2.0.0",
-    "terser-webpack-plugin": "^5.1.1",
+    "terser-webpack-plugin": "^5.1.2",
     "thunk": "0.0.1",
-    "triple-beam": "^1.3.0",
-    "ts-loader": "^8.0.18",
+    "ts-loader": "^8.3.0",
     "typesafe-actions": "^5.1.0",
-    "typescript": "^4.2.3",
-    "webpack": "^5.27.2",
+    "typescript": "^4.2.4",
+    "webpack": "^5.37.1",
     "webpack-merge": "^5.7.3",
     "winston": "^3.3.3",
     "yaml": "^1.10.2"
   },
   "devDependencies": {
-    "@hot-loader/react-dom": "^16.8.0",
-    "@types/jest": "^26.0.21",
+    "@types/jest": "^26.0.23",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.3",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.6",
-    "eslint": "^7.22.0",
+    "eslint": "^7.26.0",
     "eslint-loader": "^4.0.2",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jest": "^24.3.2",
-    "eslint-plugin-react": "^7.23.1",
+    "eslint-plugin-import": "^2.23.2",
+    "eslint-plugin-jest": "^24.3.6",
+    "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
     "jest": "^26.6.3",
     "react-hot-loader": "^4.13.0",
-    "ts-jest": "^26.5.4",
-    "webpack-cli": "^4.5.0",
-    "webpack-dev-middleware": "^4.1.0",
+    "ts-jest": "^26.5.6",
+    "webpack-cli": "^4.7.0",
+    "webpack-dev-middleware": "^4.2.0",
     "webpack-hot-middleware": "^2.25.0"
   }
 }
