--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint --ext .js,.jsx --ignore-path .gitignore . --fix",
     "test": "jest -c client/jest.config.js --collectCoverage",
     "build": "cross-env NODE_ENV=production webpack --config ./build/webpack.production.js",
+    "stats": "cross-env NODE_ENV=production webpack --config ./build/webpack.production.js --profile --json > package-stats.json && webpack-bundle-analyzer package-stats.json",
     "start": "node server/production/server-production.js"
   },
   "license": "MIT",
@@ -86,6 +87,7 @@
     "jest": "^26.6.3",
     "react-hot-loader": "^4.13.0",
     "ts-jest": "^26.5.6",
+    "webpack-bundle-analyzer": "^4.4.2",
     "webpack-cli": "^4.7.0",
     "webpack-dev-middleware": "^4.2.0",
     "webpack-hot-middleware": "^2.25.0"
