--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.7",
     "@types/reactstrap": "^8.7.2",
+    "axios": "^0.21.1",
     "babel-loader": "^8.2.2",
+    "body-parser": "^1.19.0",
     "bootstrap": "^5.0.1",
     "browserslist": "^4.16.6",
     "clean-webpack-plugin": "^3.0.0",
